# ts-telegram-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  pyproject.toml  setup.py
core/: main.py  setup_handlers.py
core/consumers/: handlers.py  main.py  schemas.py
core/containers/: factories.py  providers.py
core/dtos/: chats.py
core/exceptions/: base.py  chat.py
core/handlers/: chats.py  filters.py  start.py
core/handlers/converters/: chats.py
core/repositories/: initialize.py  sqls.py
core/repositories/chats/: base.py
core/services/: chats.py  web.py
core/services/converters/: chats.py
core/settings/: config.py  constants.py
core/utils/: constants.py  states.py
docker_compose/: bot.yaml  consumer.yaml
